objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>AE_initials__c</fullName>
        <label>AE initials</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Code__c</fullName>
        <label>Access Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Advertiser__c</fullName>
        <description>New Deal tracker.  Many &quot;new&quot; brands are simply new creatives.  Allows for reports to be run on Account/Advertiser Combo. Jake 8.31.2016</description>
        <formula>ContactAccount__c &amp;&quot;-&quot;&amp; Advertiser__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account+Advertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Brand_Program__c</fullName>
        <description>Test Field 11.21.  AE Dash.  Dashboard limited to two criteria in table display.  Concatenating Account+Brand so that they count once and we can use AE (Deal Owner) as well.</description>
        <formula>ContactAccount__c &amp; &quot; - &quot; &amp;  Brands__r.Name &amp; &quot; - &quot; &amp;  Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Field. Test Field 11.21.  AE Dash.  Dashboard limited to two criteria in table display.  Concatenating Account+Brand so that they count once and we can use AE (Deal Owner) as well.</inlineHelpText>
        <label>Account+Brand+Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Brand__c</fullName>
        <formula>ContactAccount__c &amp; &quot; - &quot; &amp;  Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account+Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser_ID__c</fullName>
        <formula>Brands__r.Advertiser__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <formula>Brands__r.Advertiser__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertiser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Deal_Number__c</fullName>
        <externalId>true</externalId>
        <label>Agency Deal Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assist1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Assist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_ID__c</fullName>
        <formula>Brands__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brands</label>
        <referenceTo>Brands__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_30__c</fullName>
        <description>12.28.12  Budget :30 Rate.  Entered on &quot;Availability&quot; Deals only.</description>
        <inlineHelpText>12.28.12  Budget :30 Rate.  Entered on &quot;Availability&quot; Deals only.</inlineHelpText>
        <label>Budget :30</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_COUNT__c</fullName>
        <formula>IF( Budget_30__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget COUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_Action__c</fullName>
        <label>Bundle Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW BUY</fullName>
                </value>
                <value>
                    <fullName>ADD TO SCHEDULE</fullName>
                </value>
                <value>
                    <fullName>REBOOK</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
                <value>
                    <fullName>FREQUENCY REVISION</fullName>
                </value>
                <value>
                    <fullName>RATE REVISION</fullName>
                </value>
                <value>
                    <fullName>RATE AND FREQUENCY REVISION</fullName>
                </value>
                <value>
                    <fullName>TRAFFIC REVISION ONLY</fullName>
                </value>
                <value>
                    <fullName>CANCEL BEFORE START</fullName>
                </value>
                <value>
                    <fullName>RATE ADJUSTMENT/CANCEL</fullName>
                </value>
                <value>
                    <fullName>FREQUENCY ADJUSTMENT/CANCEL</fullName>
                </value>
                <value>
                    <fullName>ADD WEEK/RATE REVISION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bundle_Start_Week__c</fullName>
        <label>Bundle Start Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bundles__c</fullName>
        <inlineHelpText>Number of Bundles - For sending Raycom Orders</inlineHelpText>
        <label>[Dep]Bundles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cable_Synd_PP_del__c</fullName>
        <formula>Text(Program__r.Cable_Synd__c)</formula>
        <label>Cable/Synd/PP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <description>Campaign for a specific brand</description>
        <label>Campaign</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCode__c</fullName>
        <formula>Program__r.ClientCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClientCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Code__c</fullName>
        <label>Client Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Type__c</fullName>
        <description>Pulls the Commercial Type in from the Advertiser.</description>
        <formula>TEXT(Brands__r.Advertiser__r.Commercial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HYBRID or DR, based on Advertiser.</inlineHelpText>
        <label>Commercial Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Value__c</fullName>
        <formula>IF(ISPICKVAL(Score__c,&quot;New Agency to Marathon&quot;),8,

IF(ISPICKVAL(Score__c,&quot;New Agency to Team&quot;),4,

IF(ISPICKVAL(Score__c,&quot;Existing Advertiser to Team&quot;),2,

IF(ISPICKVAL(Score__c,&quot;New Advertiser to Industry&quot;),1,

IF(ISPICKVAL(Score__c,&quot;New Added Value&quot;),10,

IF(ISPICKVAL(Score__c,&quot;New Advertiser to Off Peak&quot;),1,

0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competition Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactAccount__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Type__c</field>
                <operation>notEqual</operation>
                <value>history</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Do Not Call</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_of_Schedules__c</fullName>
        <label>Count of Schedules</label>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Stations__c</fullName>
        <formula>Program__r.Number_of_Stations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Stations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Weeks__c</fullName>
        <label>Count of Weeks</label>
        <summaryFilterItems>
            <field>Schedules__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Created_Numeric__c</fullName>
        <description>Trying to create a report that allows us to track new Advertisers or Brands to a network.  I was able to build a report that shows new deals in unreconciled weeks, but no way to sort them by Created Date.  Date fields can&apos;t be used as a bucket or populated in table data... so thought I&apos;d convert to a number value using decimals to date format and then use that!
JAKE 8.31.2016</description>
        <formula>TODAY () - DATEVALUE((CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demographics__c</fullName>
        <label>Ratings Demos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F18-24</fullName>
                </value>
                <value>
                    <fullName>F18-25</fullName>
                </value>
                <value>
                    <fullName>F18-34</fullName>
                </value>
                <value>
                    <fullName>F18-49</fullName>
                </value>
                <value>
                    <fullName>F18-99</fullName>
                </value>
                <value>
                    <fullName>F25-34</fullName>
                </value>
                <value>
                    <fullName>F25-49</fullName>
                </value>
                <value>
                    <fullName>F25-54</fullName>
                </value>
                <value>
                    <fullName>F25-64</fullName>
                </value>
                <value>
                    <fullName>F25-99</fullName>
                </value>
                <value>
                    <fullName>F2-99</fullName>
                </value>
                <value>
                    <fullName>F35-49</fullName>
                </value>
                <value>
                    <fullName>F35-54</fullName>
                </value>
                <value>
                    <fullName>F35-64</fullName>
                </value>
                <value>
                    <fullName>F35-99</fullName>
                </value>
                <value>
                    <fullName>F45-54</fullName>
                </value>
                <value>
                    <fullName>F50-64</fullName>
                </value>
                <value>
                    <fullName>F50-99</fullName>
                </value>
                <value>
                    <fullName>F55-64</fullName>
                </value>
                <value>
                    <fullName>F55-99</fullName>
                </value>
                <value>
                    <fullName>F65-99</fullName>
                </value>
                <value>
                    <fullName>HH</fullName>
                </value>
                <value>
                    <fullName>M18-24</fullName>
                </value>
                <value>
                    <fullName>M18-34</fullName>
                </value>
                <value>
                    <fullName>M18-49</fullName>
                </value>
                <value>
                    <fullName>M18-99</fullName>
                </value>
                <value>
                    <fullName>M25-34</fullName>
                </value>
                <value>
                    <fullName>M25-49</fullName>
                </value>
                <value>
                    <fullName>M25-54</fullName>
                </value>
                <value>
                    <fullName>M25-64</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <formula>IF( ISPICKVAL( Program__r.Deal_Entity__c , &quot;Marathon Ventures LLC&quot;) , &quot;Marathon Ventures LLC&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equiv_30__c</fullName>
        <description>DELETE- Used in Q4 2008.  Think this is deleteable, but not sure.</description>
        <formula>VALUE(TEXT(Length__c)) 
/30 
* Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>case(Length__c, &quot;30&quot;, 30, &quot;60&quot;, 60, &quot;120&quot;, 120, &quot;300&quot;, 300, &quot;15&quot;, 15, 0)
 /30
 * Units__c</inlineHelpText>
        <label>Equiv :30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <label>Estimate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Invoice_Month__c</fullName>
        <label>FF Invoice Month</label>
        <summaryFilterItems>
            <field>Schedules__c.Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/30/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Week__c</field>
            <operation>lessThan</operation>
            <value>5/28/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Units_Aired__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FF_Long_Form_Invoice_Month__c</fullName>
        <label>FF Long Form Invoice Month</label>
        <summaryFilterItems>
            <field>Schedules__c.Week__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/30/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Week__c</field>
            <operation>lessThan</operation>
            <value>5/28/2018</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Schedules__c.Units_Aired__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flight_Dates__c</fullName>
        <formula>TEXT(MONTH(Week_MIN_Field__c))+&quot;/&quot; +TEXT(DAY(Week_MIN_Field__c))+&quot;/&quot; +Right(TEXT(YEAR(Week_MIN_Field__c)),2)&amp;&quot; - &quot;&amp;TEXT(MONTH(Flight_End_Date__c))+&quot;/&quot; +TEXT(DAY(Flight_End_Date__c))+&quot;/&quot; +Right(TEXT(YEAR(Flight_End_Date__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_End_Date__c</fullName>
        <formula>Week_Max__c + 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flighted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To denote deals with flighted budgets</description>
        <label>Flighted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>[Dep]Invoice Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Katz_Hybrid__c</fullName>
        <label>Katz Hybrid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTC_Date__c</fullName>
        <label>LTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                    <color>#0B6FCE</color>
                    <label>30</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <color>#78C953</color>
                    <label>60</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <color>#E27001</color>
                    <label>120</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <color>#A845DC</color>
                    <label>300</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <color>#F3D904</color>
                    <label>15</label>
                </value>
                <value>
                    <fullName>1710</fullName>
                    <color>#A53711</color>
                    <label>1710</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <color>#66E9BD</color>
                    <label>90</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <color>#0B24BE</color>
                    <label>180</label>
                </value>
                <value>
                    <fullName>240</fullName>
                    <color>#419249</color>
                    <label>240</label>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>1714</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Day__c</fullName>
        <label>Max/Day</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Sep__c</fullName>
        <description>Min Sep for all schedules associated with a deal in minutes.</description>
        <inlineHelpText>Use Brand Separation. If not on paperwork, enter 30 min.</inlineHelpText>
        <label>[Dep]Max Sep</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Sep__c</fullName>
        <description>Min Sep for all schedules associated with a deal in minutes. Use Brand Separation. If not on paperwork, enter 30 min.</description>
        <inlineHelpText>Uses Brand Separation. If not on paperwork, enter 15 min.</inlineHelpText>
        <label>Min Sep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                    <default>true</default>
                    <label>15</label>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Money_Movement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for money movements.</description>
        <inlineHelpText>Used for money movements.</inlineHelpText>
        <label>Money Movement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Deal_Number__c</fullName>
        <description>Deal number in Network&apos;s paper work, in Network&apos;s records.</description>
        <externalId>true</externalId>
        <inlineHelpText>Deal number in Network&apos;s paper work, in Network&apos;s records.  Equals 1 if the PI campaign is no longer airing on the network.</inlineHelpText>
        <label>Network Deal Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a deal represents a PI deal.</description>
        <label>PI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>TEXT(Brands__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Team_del__c</fullName>
        <formula>Program__r.Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>[Dep]Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Raycom_Comments__c</fullName>
        <label>Bundle Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Deal_ID__c</fullName>
        <description>Used for sending emails to Salesforce so that they can be filed directly to the Deal</description>
        <formula>&quot;(ref:&quot; &amp; Id &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for sending emails to Salesforce so that they can be filed directly to the Deal</inlineHelpText>
        <label>SF Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[Dep]Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Invoices_URL__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;Reportid=00OC0000007ECHA?pv0=Id&quot; +
&quot;&amp;TemplateID=a0BC000000gEOQo&quot; + 
&quot;&amp;AttachmentParentId=&quot; + Id + 
&quot;&amp;OFN=MVMS+Program__c+Deal__c.Account_Brand__c+TODAY()&quot;+
&quot;&amp;EmailFromId=0D280000000TNHc&quot; + 
&quot;&amp;EmailTo=faronerasheed@mvmediasales.com&quot; + 
&quot;&amp;lg3=1&amp;lg4=1&quot; + 
&quot;&amp;ExcelAutoFitColumns=1&quot; + 
&quot;&amp;EmailCC=faronerasheed@mvmediasales.com&quot; +
&quot;&amp;Emailbcc=faronerasheed@mvmediasales.com&quot; + 
&quot;&amp;EmailTemplateId=00X80000001Rbq2&quot; + 
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Invoices URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Competition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Added Value</fullName>
                </value>
                <value>
                    <fullName>New Agency to Marathon</fullName>
                </value>
                <value>
                    <fullName>New Agency to Team</fullName>
                </value>
                <value>
                    <fullName>Existing Advertiser to Team</fullName>
                </value>
                <value>
                    <fullName>New Advertiser to Industry</fullName>
                </value>
                <value>
                    <fullName>New Advertiser to Off Peak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SendRaycomXMLnow__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ONLY For RAYCOM XML</inlineHelpText>
        <label>SendRaycomXMLnow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sold</fullName>
                    <default>true</default>
                    <label>Sold</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Historical</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Total_Dollars__c</fullName>
        <inlineHelpText>Sum of Total Dollars for the schedules for this deal.</inlineHelpText>
        <label>Sum of Total Dollars</label>
        <summarizedField>Schedules__c.Dollars_Booked__c</summarizedField>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Units_Available__c</fullName>
        <label>Sum of Units Available</label>
        <summarizedField>Schedules__c.Units_Available__c</summarizedField>
        <summaryFilterItems>
            <field>Schedules__c.Status__c</field>
            <operation>equals</operation>
            <value>Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_PP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Paid Programming ONLY.  Check to indicate a test deal for month.</description>
        <inlineHelpText>Paid Programming ONLY.  Check to indicate a test deal for month.</inlineHelpText>
        <label>[Dep]Test PP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today_s_Date_Time__c</fullName>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today&apos;s Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>DELETE- Used in Q4 2008.  Think this is deleteable, but not sure.</description>
        <label>[Dep]Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <formula>Program__r.Vendor_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Commission__c</fullName>
        <formula>Program__r.Vendor_Account__r.Network_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Week_MIN_Field__c</fullName>
        <label>Week MIN Field</label>
        <summarizedField>Schedules__c.Week__c</summarizedField>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Max__c</fullName>
        <label>Week Max</label>
        <summarizedField>Schedules__c.Week__c</summarizedField>
        <summaryForeignKey>Schedules__c.Deal_Parent__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_Pending__c</fullName>
        <formula>Program__r.Week_Pending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Pending</label>
        <type>Date</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>ContactAccount__c</columns>
        <columns>Brands__c</columns>
        <columns>Campaign__c</columns>
        <columns>Network_Deal_Number__c</columns>
        <columns>Flight_Dates__c</columns>
        <columns>Length__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>contains</operation>
            <value>Bounce</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>